# otto-sh

./: .coveragerc  .gitignore  .gitmodules  .readthedocs.yaml  .ruff.toml  .ty.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DEV_README.md  Makefile  README.md  Vagrantfile  cliff.toml  noxfile.py  project_env  pyproject.toml
.githooks/: prepare-commit-msg
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  nightly.yml  release-testpypi.yml  release.yml  untitledui-drift.yml
docs/: conf.py  contributing.md  getting-started.md  index.rst  overview.md  release_process.md
docs/_inventories/: asyncssh.inv  telnetlib3.inv  typer.inv
docs/_static/: custom.css  termynal-init.js  termynal-otto.css
docs/api/: bootstrap.rst  config.rst  configmodule.rst  context.rst  examples.rst  index.rst  labs.rst  link.rst  logger.rst  registry.rst  reservations.rst  result.rst  storage.rst  testing.rst  tunnel.rst  utils.rst
docs/api/cli/: cov.rst  docker.rst  host.rst  index.rst  invoke.rst  main.rst  monitor.rst  registry.rst  reservation.rst  run.rst  test.rst
docs/api/coverage/: capture.rst  colors.rst  correlator.rst  exclusions.rst  fetcher.rst  index.rst  merge.rst  renderer.rst  reporter.rst  store_model.rst  tiers.rst  validity.rst
docs/api/docker/: build.rst  compose.rst  index.rst  staging.rst
docs/api/host/: adding_an_embedded_filesystem.rst  app_shell.rst  (+32 more)
docs/architecture/: data-boundary.md  docker-hosts.md  extension-points.md  hosts.md  index.rst  lifecycle.md  monitoring-and-coverage.md  overview.md  principles.md  registries.md  results-and-logging.md  test-pipeline.md
docs/cookbook/: async-patterns.md  connection-options.md  index.rst  sessions-and-repeats.md  sessions.md  suite-recipes.md
docs/design/: docker_hosts.md
docs/guide/: cli-reference.md  coverage-clang.md  coverage-embedded.md  coverage-gcc.md  coverage.md  docker.md  editor-schemas.md  embedded.md  extending-backends.md  extending-cli.md  extending-embedded.md  host-database.md  host-dynamic-cli.md  host-file-ops.md  host-power.md  host-privilege.md  host-products.md  host.md  index.rst  lab-config.md  library-usage.md  link.md  monitor.md  options.md  os-profiles.md  repo-setup.md  reservations.md  run.md  test.md  tunnel.md
scripts/: build_web_no_warnings.sh  capture_docs_media.py  capture_docs_termynal.py  check_airgap.sh  check_brand_tokens.sh  check_untitledui_drift.sh  ci_drop_unused_apt_sources.sh  gen_monitor_fixtures.py  gen_web_types.sh  import_budget.py  install_hyperfine.sh  junit_durations.py  junit_failures.py  lab_health.py  lint_markdown_doctests.py  stability_campaign.py
src/otto/: __init__.py  __main__.py  bootstrap.py  console.py  context.py  filesystem.py  params.py  registry.py  result.py  utils.py  version.py
tests/: conftest.py  mockrepo.py
tests/_coverage_bootstrap/: sitecustomize.py
tests/_fixtures/: _browser_guard.py  _clock.py  _console_lock.py  _coverage_preinit.py  _dashboard_harness.py  _fake_collector.py  _host_pool.py  _loop_reaper.py  _report_fixture.py  _time_mirror.py  _ts_coverage.py  format_outage_cases.json  labdata.py  mockrepo.py  paths.py  tunnel_bed.py
tests/custom_hosts/: README.md
tests/e2e/: _otto_subprocess.py  _selection_fixtures.py  conftest.py  test_init_e2e.py  test_link_impair_e2e.py  test_link_tunnels_e2e.py  test_repo_wide_conftest.py  test_selection_runs.py  test_tunnel_e2e.py
tests/integration/: conftest.py  test_docker_build.py  test_docker_compose.py  test_docker_e2e_cli.py  test_docker_in_instruction.py  test_docker_run_get_put.py  test_embedded_coverage_e2e.py
tests/repo1/: conftest.py
tests/repo3/: README.md
tests/repo3/product/: CMakeLists.txt  README.md  build.sh  prj.conf
tests/repo3/product/src/: cov_ext.c  main.c
tests/unit/: conftest.py  test_browser_group_policy.py  test_ci_web_gate.py  test_cli_exposed_output_dir.py  test_context.py  test_coverage_schema_preinit.py  test_docs_deps.py  test_e2e_clock_hygiene.py  test_env_hermeticity.py  test_filesystem.py  test_format_outage_mirror.py  test_frontload_ordering.py  test_host_pool_lease.py  test_lab_data_hops.py  test_loop_reaper.py  test_markdown_doctest_lint.py  test_registry_isolation.py  test_reservations_meta.py  test_tier_marker_invariants.py  test_tunnel_bed_guard.py  test_utils.py  test_utils_cli_markers.py
todo/: TODO.md  app-shell-recover-session-echo-proof.md  branch_to_target.md  browser-shard-dev-vm-after-ram-bump.md  collapse-pure-data-spec-runtime-types.md  command_frame_protocol.md  coverage_roadmap.md  doctest-modules-duplicate-import-hazard.md  embedded-recovery-confirm-live-tests.md  embedded_cortex_m_migration.md  embedded_coverage.md  expert_feedback_reassessment.md  fable_review.md  fable_review_outcome.md  fable_review_verification.md  gcno_mismatch_error.md  hop_nc_transfer_flake.md  host-declared-transfer-term-lists.md  host-default-options.md  host-pool-lease-health-followup.md  host-preferences-end-state.md  host_helper_commands.md  import-light-otto-init.md  link.md  make-web-dist-fresh-worktree-npm-ci.md  metric-point-dataclass.md  migration_plan.md  monitor-event-marking-followups.md  monitor-live-streaming-followups.md  monitor-phase3-plan-a-followups.md  monitor-phase3-plan-b-followups.md  monitor-sessionized-producer-followups.md  monitor-topology-followups.md  monitor-ui-scaffold-followups.md  monitor-views-followups.md  monitor_db_count10_flakes.md  multi-hop-growth-plan.md  multi_interface_hosts.md  nc_failure_injection_tests.md  nc_monitor_retirement.md  (+19 more)
web/: README.md  biome.json  index.html  knip.json  package-lock.json  package.json  tsconfig.json  untitledui.lock.json  vite.config.ts  vite.covreport.config.ts  vitest.setup.ts
web/fixtures/: cascade.json  drift.json  isp-core.json  kitchen-sink.json  minimal.json  sprawl.json
web/scripts/: e2e_coverage_report.mjs
web/src/: App.tsx  app.css  dashboard.css  events.ts  grouping.ts  logevents.ts  main.tsx  plotly-gl2d.d.ts  plotly.ts  retirement.ts  store.ts  theme.ts
(+1093 files in other folders)
