[project]
name = "otto-sh"
version = "0.0.2"
description = "Our Trusty Testing Orchestrator - framework and CLI for deploying, testing, and monitoring software across remote hosts."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Chris Collins", email = "chriscoll93@gmail.com" },
]
keywords = [
    "testing",
    "automation",
    "orchestration",
    "ssh",
    "telnet",
    "asyncio",
    "cli",
    "remote-execution",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "aioftp>=0.27.2",
    "aiosqlite>=0.21.0",
    "asyncssh>=2.22.0",
    "fastapi>=0.135.1",
    "jinja2>=3.1.0",
    # pytest + pytest-asyncio are runtime deps because otto imports user
    # test files at runtime (orchestration introspection), and those files
    # commonly `import pytest` / use `pytest_asyncio` markers.
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "rich>=15.0.0",
    "sse-starlette>=3.3.3",
    "telnetlib3>=4.0.1",
    "tomli>=2.4.0",
    "typer>=0.24.0",
    "uvicorn>=0.42.0",
]

[project.scripts]
otto = "otto:app"

[project.urls]
Homepage = "https://github.com/ludachrish3/otto-sh"
Source = "https://github.com/ludachrish3/otto-sh"
Issues = "https://github.com/ludachrish3/otto-sh/issues"
Documentation = "https://otto-sh.readthedocs.io"
Changelog = "https://github.com/ludachrish3/otto-sh/blob/main/CHANGELOG.md"

[build-system]
requires = [
    "uv_build>=0.10.0",
    "uv_build<0.11.0",
]
build-backend = "uv_build"

# Dist name is `otto-sh` (for PyPI); the import package stays `otto`, so the
# build backend needs to be pointed at src/otto/ explicitly.
[tool.uv.build-backend]
module-name = "otto"

[dependency-groups]
dev = [
    "bump-my-version>=1.3.0",
    "sphinx-immaterial",
    "myst-parser>=4.0.1",
    "py-spy>=0.4.1",
    "pyinstrument>=5.1.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.7",
    "sphinx>=8.0",
    "sphinx-autodoc-typehints>=2.0",
    "ty==0.0.31",
]

[tool.pyright]
typeCheckingMode = "strict"
ignore = [
    #"tests", # pytest does not play nice with type checking
]

# ty is being trialled alongside pyright; see todo/ty_vs_pylance_eval.md.
# Pinned hard because ty uses 0.0.x versioning with breaking changes between
# any two releases.
[tool.ty.environment]
python-version = "3.10"
root = ["./src"]

[tool.ty.src]
include = ["src"]
exclude = ["tests", "typings", "docs", "build", "dist"]

# All rules at error — there is no pyright-style --strict preset, so we
# escalate everything uniformly. Rules that turn out to be too noisy should
# be demoted individually here (not silenced globally) so the decision is
# visible in diff review.
[tool.ty.rules]
all = "error"

[tool.pytest.ini_options]
testpaths = [
    "tests/unit",
    "tests/integration",
]
pythonpath = ["src", "."]
log_cli = true
log_level = "INFO"
log_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S.%f"
addopts = "--doctest-modules --cov=otto --cov-context=test --cov-report term-missing --cov-report html -n auto --dist loadgroup"
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "strict"
markers = [
    "integration: requires running Vagrant VMs (deselect with -m 'not integration')",
    "hops: multi-hop integration tests requiring 3 Vagrant VMs (deselect with -m 'not hops')",
    "timeout(seconds): fail the test if it exceeds the given number of seconds",
    "retry(n): retry the test up to n times on failure before reporting it as failed",
]

[tool.bumpversion]
current_version = "0.0.2"
commit = true
tag = true
tag_name = "v{new_version}"
tag_message = "Release v{new_version}"
message = "chore(release): bump version {current_version} -> {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## [Unreleased]"
replace = "## [Unreleased]\n\n## [{new_version}] - {now:%Y-%m-%d}"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "[Unreleased]: https://github.com/ludachrish3/otto-sh/compare/v{current_version}...HEAD"
replace = "[Unreleased]: https://github.com/ludachrish3/otto-sh/compare/v{new_version}...HEAD\n[{new_version}]: https://github.com/ludachrish3/otto-sh/compare/v{current_version}...v{new_version}"

# Keep the lock entry for otto-sh in sync. Without this, every `uv run`
# after a bump detects pyproject ↔ lock drift and re-syncs the lock,
# dirtying the tree and blocking the next `make release`.
[[tool.bumpversion.files]]
filename = "uv.lock"
search = "name = \"otto-sh\"\nversion = \"{current_version}\""
replace = "name = \"otto-sh\"\nversion = \"{new_version}\""
