[project]
name = "otto-sh"
version = "0.4.1"
description = "Our Trusty Testing Orchestrator - framework and CLI for deploying, testing, and monitoring software across remote hosts."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Chris Collins", email = "chriscoll93@gmail.com" },
]
keywords = [
    "testing",
    "automation",
    "orchestration",
    "ssh",
    "telnet",
    "asyncio",
    "cli",
    "remote-execution",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "aioftp>=0.27.2",
    "aiosqlite>=0.21.0",
    "asyncssh>=2.22.0",
    "fastapi>=0.135.1",
    "jinja2>=3.1.0",
    # SNMP manager for embedded / separate-channel performance monitoring.
    "pysnmp>=7.1.0",
    # pytest + pytest-asyncio + pytest-timeout are runtime deps because otto
    # imports user test files at runtime (orchestration introspection), those
    # files commonly `import pytest` / use `pytest_asyncio` markers, and
    # `otto test` relies on pytest-timeout to honor `@pytest.mark.timeout(N)`.
    "pytest>=9.0.1",
    "pytest-asyncio>=1.4.0",
    "pytest-timeout>=2.3.1",
    "rich>=15.0.0",
    "sse-starlette>=3.3.3",
    "telnetlib3>=4.0.1",
    "tomli>=2.4.0",
    "typer>=0.24.0",
    "uvicorn>=0.42.0",
]

[project.scripts]
otto = "otto:app"

[project.urls]
Homepage = "https://github.com/ludachrish3/otto-sh"
Source = "https://github.com/ludachrish3/otto-sh"
Issues = "https://github.com/ludachrish3/otto-sh/issues"
Documentation = "https://otto-sh.readthedocs.io"
Changelog = "https://github.com/ludachrish3/otto-sh/blob/main/CHANGELOG.md"

[build-system]
requires = [
    "uv_build>=0.10.0",
    "uv_build<0.12.0",
]
build-backend = "uv_build"

# Dist name is `otto-sh` (for PyPI); the import package stays `otto`, so the
# build backend needs to be pointed at src/otto/ explicitly.
[tool.uv.build-backend]
module-name = "otto"

[dependency-groups]
dev = [
    "bump-my-version>=1.3.0",
    "git-cliff>=2.13.1",
    "sphinx-immaterial",
    "myst-parser>=4.0.1",
    "nox>=2024.10.9",
    "nox-uv>=0.6",
    "py-spy>=0.4.1",
    "pyinstrument>=5.1.2",
    "pytest-cov>=7.0.0",
    "pytest-repeat>=0.9.4",
    "pytest-xdist>=3.8.0",
    "hypothesis>=6.131.0",
    "ruff>=0.14.7",
    "sphinx>=8.0",
    "sphinx-autodoc-typehints>=2.0",
    "ty==0.0.45",
]

[tool.pyright]
typeCheckingMode = "strict"
ignore = [
    #"tests", # pytest does not play nice with type checking
]

# ty is being trialled alongside pyright; see todo/ty_vs_pylance_eval.md.
# Pinned hard because ty uses 0.0.x versioning with breaking changes between
# any two releases.
[tool.ty.environment]
python-version = "3.10"
root = ["./src"]

[tool.ty.src]
include = ["src"]
exclude = ["tests", "typings", "docs", "build", "dist"]

# All rules at error — there is no pyright-style --strict preset, so we
# escalate everything uniformly. Rules that turn out to be too noisy should
# be demoted individually here (not silenced globally) so the decision is
# visible in diff review.
[tool.ty.rules]
all = "error"
# Demoted: ty 0.0.45 added `missing-override-decorator`, which flags every
# method overriding a base without `@override`. Adopting it means decorating
# ~80 methods and adding a `typing_extensions.override` dependency (our floor
# is 3.10; `typing.override` is 3.12+). Tracked separately for deliberate
# adoption rather than riding in on a dependency bump. See GitHub issue.
missing-override-decorator = "ignore"

[tool.pytest.ini_options]
testpaths = [
    "tests/unit",
    "tests/integration",
]
pythonpath = ["src", "."]
log_cli = true
log_level = "INFO"
log_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S.%f"
addopts = "--doctest-modules --cov=otto --cov-context=test --cov-report term-missing --cov-report html -n auto --dist loadgroup"
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "strict"
# Per-test wall-clock budget. Deliberately lax (3 min) until the embedded suite's
# new duration profile is understood — dial down once we know real expectations.
# A hung test fails individually (SIGALRM on the worker's main thread) and the
# session still reaches sessionfinish, so the JUnit report is written. Override
# per-test/module with @pytest.mark.timeout(N).
timeout = 180
timeout_method = "signal"
# Backstop for hangs the per-test SIGALRM can't break (e.g. a blocking C call) or
# hangs in session teardown/finalization: faulthandler dumps every thread's stack
# after this many seconds so a wedge is diagnosable instead of silent. Kept above
# `timeout` so the graceful per-test path fires first under normal hangs.
faulthandler_timeout = 300
filterwarnings = [
    "error",
]
markers = [
    "integration: requires running Vagrant VMs (deselect with -m 'not integration')",
    "hops: multi-hop integration tests requiring 3 Vagrant VMs (deselect with -m 'not hops')",
    "embedded: requires Zephyr QEMU under the zephyr Vagrant VM (deselect with -m 'not embedded')",
    "timeout(seconds): fail the test if it exceeds the given number of seconds",
    "retry(n): retry the test up to n times on failure before reporting it as failed",
    "stability: heavy stability/soak tests — excluded from `make coverage`; run via `make stability` / `make stability-embedded`",
    "concurrency: fast, no-VM SessionManager concurrency/soak tests — run via `make stability-unit`; stays in coverage",
]

# NB: coverage.py config lives in .coveragerc, not here — that file is shared
# with the subprocess-coverage bootstrap and takes precedence over any
# [tool.coverage.*] table in this file.

[tool.bumpversion]
current_version = "0.4.1"
commit = true
tag = true
tag_name = "v{new_version}"
tag_message = "Release v{new_version}"
message = "chore(release): bump version {current_version} -> {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

# CHANGELOG.md is owned by git-cliff (see cliff.toml + `make changelog`).
# bump-my-version no longer touches it — the release flow regenerates the
# whole file from conventional commit history immediately before bumping.

# Keep the lock entry for otto-sh in sync. Without this, every `uv run`
# after a bump detects pyproject ↔ lock drift and re-syncs the lock,
# dirtying the tree and blocking the next `make release`.
[[tool.bumpversion.files]]
filename = "uv.lock"
search = "name = \"otto-sh\"\nversion = \"{current_version}\""
replace = "name = \"otto-sh\"\nversion = \"{new_version}\""
