[project]
name = "otto-sh"
version = "0.6.0"
description = "Our Trusty Testing Orchestrator - framework and CLI for deploying, testing, and monitoring software across remote hosts."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Chris Collins", email = "chriscoll93@gmail.com" },
]
keywords = [
    "testing",
    "automation",
    "orchestration",
    "ssh",
    "telnet",
    "asyncio",
    "cli",
    "remote-execution",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "aioftp>=0.27.2",
    "aiosqlite>=0.21.0",
    "asyncssh>=2.22.0",
    "fastapi>=0.135.1",
    "jinja2>=3.1.0",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    # SNMP manager for embedded / separate-channel performance monitoring.
    "pysnmp>=7.1.0",
    # pytest + pytest-asyncio + pytest-timeout are runtime deps because otto
    # imports user test files at runtime (orchestration introspection), those
    # files commonly `import pytest` / use `pytest_asyncio` markers, and
    # `otto test` relies on pytest-timeout to honor `@pytest.mark.timeout(N)`.
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-timeout>=2.3.1",
    "rich>=15.0.0",
    "sse-starlette>=3.3.3",
    # Imported directly in monitor/server.py (starlette.requests.Request);
    # declared explicitly rather than relying on the transitive fastapi/sse-starlette pull.
    "starlette>=0.52.1",
    "telnetlib3>=4.0.1",
    "tomli>=2.4.0",
    "typer>=0.26",
    # `override` (PEP 698) lives in `typing` only from 3.12; our floor is 3.10,
    # so it is imported from typing_extensions. Already resolved transitively
    # (pydantic/typer); declared directly because we now import it directly.
    "typing-extensions>=4.12.0",
    "uvicorn>=0.42.0",
]

[project.scripts]
otto = "otto.cli.main:entry"

[project.urls]
Homepage = "https://github.com/ludachrish3/otto-sh"
Source = "https://github.com/ludachrish3/otto-sh"
Issues = "https://github.com/ludachrish3/otto-sh/issues"
Documentation = "https://otto-sh.readthedocs.io"
Changelog = "https://github.com/ludachrish3/otto-sh/blob/main/CHANGELOG.md"

[build-system]
requires = [
    "uv_build>=0.10.0",
    "uv_build<0.12.0",
]
build-backend = "uv_build"

# Dist name is `otto-sh` (for PyPI); the import package stays `otto`, so the
# build backend needs to be pointed at src/otto/ explicitly.
[tool.uv.build-backend]
module-name = "otto"

# NOTE on air-gapped installs (no extra config needed here, on purpose):
# otto labs are air-gapped, so `otto monitor`'s React dashboard must ship
# INSIDE the wheel — it can't be fetched post-install. The built dashboard
# lands in src/otto/monitor/static/dist/ (via `make web`), which is
# .gitignore'd like any other build output.
#
# Unlike hatchling (whose default wheel contents come from the VCS file list
# and would silently drop anything .gitignore'd), uv_build's default file
# selection is NOT git-aware: per its docs, a sdist/wheel build includes the
# entire directory tree under `module-root` (src/otto/) from disk, minus only
# __pycache__/*.pyc/*.pyo. So src/otto/monitor/static/dist/ is embedded
# automatically once `make web` has populated it before `uv build` runs — no
# [tool.uv.build-backend] include/data config is required. Verified via
# `make wheel-check` (builds web + wheel, then asserts dist/index.html + its
# assets are present in the .whl); do not add a `wheel-exclude`/
# `source-exclude` pattern that would match `static/dist/**`, or air-gapped
# installs break silently.

[dependency-groups]
dev = [
    "bump-my-version>=1.3.0",
    "git-cliff>=2.13.1",
    "sphinx-immaterial",
    "myst-parser>=4.0.1",
    "nox>=2024.10.9",
    "nox-uv>=0.6",
    "py-spy>=0.4.1",
    "pyinstrument>=5.1.2",
    "pytest-cov>=7.0.0",
    # Browser e2e for the monitor dashboard (tests/e2e/monitor/dashboard).
    # pytest-playwright pulls in playwright; browser binaries are installed
    # separately via `make browsers` (playwright install chromium).
    "pytest-playwright>=0.7.1",
    "pytest-repeat>=0.9.4",
    "pytest-xdist>=3.8.0",
    "hypothesis>=6.131.0",
    "jsonschema>=4.0",
    "ruff>=0.15.20",
    "sphinx>=8.0",
    "doc8>=1.1",
    "ty==0.0.58",
]

[tool.doc8]
max-line-length = 100
ignore-path = ["docs/_build"]

[tool.pyright]
typeCheckingMode = "strict"
ignore = [
    #"tests", # pytest does not play nice with type checking
]

# ty is being trialled alongside pyright; see todo/ty_vs_pylance_eval.md.
# Pinned hard because ty uses 0.0.x versioning with breaking changes between
# any two releases.
[tool.ty.environment]
python-version = "3.10"
root = ["./src"]

[tool.ty.src]
include = ["src"]
exclude = ["tests", "typings", "docs", "build", "dist"]

# All rules at error — there is no pyright-style --strict preset, so we
# escalate everything uniformly. Rules that turn out to be too noisy should
# be demoted individually here (not silenced globally) so the decision is
# visible in diff review.
[tool.ty.rules]
all = "error"

[tool.pytest.ini_options]
testpaths = [
    "tests/unit",
    "tests/integration",
    "tests/e2e",
]
pythonpath = ["src", "."]
log_cli = true
log_level = "INFO"
log_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S.%f"
addopts = "--doctest-modules --cov=otto --cov-context=test --cov-report term-missing --cov-report html -n auto --dist loadgroup"
doctest_optionflags = ["NORMALIZE_WHITESPACE", "ELLIPSIS"]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "strict"
# Per-test wall-clock budget. Deliberately lax (3 min) until the embedded suite's
# new duration profile is understood — dial down once we know real expectations.
# A hung test fails individually (SIGALRM on the worker's main thread) and the
# session still reaches sessionfinish, so the JUnit report is written. Override
# per-test/module with @pytest.mark.timeout(N).
timeout = 180
timeout_method = "signal"
# Time only the test *function* (call phase), not setup/teardown. Without this,
# pytest-timeout's signal method scopes the whole item (setup + call + teardown)
# under one SIGALRM, so per-test fixture/teardown cost — e.g. the autouse
# OTTO_DETECT_ASYNCIO_LEAKS gc-scan — counts against a tight @timeout(N) and,
# under nightly xdist contention, tips it over and surfaces as a misattributed
# "ERROR at teardown: Timeout". The call phase is the test's own contract; hangs
# in setup/teardown are caught by `faulthandler_timeout` below instead.
timeout_func_only = true
# Backstop for hangs the per-test SIGALRM can't break (e.g. a blocking C call) or
# hangs in session setup/teardown/finalization (now outside the per-test timeout
# window): faulthandler dumps every thread's stack after this many seconds so a
# wedge is diagnosable instead of silent. Kept above `timeout` so the graceful
# per-test path fires first under normal hangs.
faulthandler_timeout = 300
filterwarnings = [
    "error",
]
markers = [
    "integration: requires running Vagrant VMs (deselect with -m 'not integration')",
    "hops: multi-hop integration tests requiring 3 Vagrant VMs (deselect with -m 'not hops')",
    "embedded: requires Zephyr QEMU under the zephyr Vagrant VM (deselect with -m 'not embedded')",
    "hostless: e2e test that needs no test bed (no Vagrant VMs, no docker daemon, no Zephyr) — deselect with -m 'not hostless'",
    "browser: needs a Playwright browser binary (make browsers) — additive resource refinement, deselect with -m 'not browser'",
    "timeout(seconds): fail the test if it exceeds the given number of seconds",
    "retry(n): retry the test up to n times on failure before reporting it as failed",
    "stability: heavy stability/soak tests — excluded from `make coverage`; run via `make stability` / `make stability-embedded`",
    "concurrency: fast, no-VM SessionManager concurrency/soak tests — run via `make stability-unit`; stays in coverage",
    "e2e: end-to-end-tier test, auto-stamped from tests/e2e/ (level axis; orthogonal to the integration/embedded resource markers)",
]

# NB: coverage.py config lives in .coveragerc, not here — that file is shared
# with the subprocess-coverage bootstrap and takes precedence over any
# [tool.coverage.*] table in this file.

[tool.bumpversion]
current_version = "0.6.0"
commit = true
tag = true
tag_name = "v{new_version}"
tag_message = "Release v{new_version}"
message = "chore(release): bump version {current_version} -> {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

# CHANGELOG.md is owned by git-cliff (see cliff.toml + `make changelog`).
# bump-my-version no longer touches it — the release flow regenerates the
# whole file from conventional commit history immediately before bumping.

# Keep the lock entry for otto-sh in sync. Without this, every `uv run`
# after a bump detects pyproject ↔ lock drift and re-syncs the lock,
# dirtying the tree and blocking the next `make release`.
[[tool.bumpversion.files]]
filename = "uv.lock"
search = "name = \"otto-sh\"\nversion = \"{current_version}\""
replace = "name = \"otto-sh\"\nversion = \"{new_version}\""
